sda-docker/e-commerce-app/kubernetes-test/lessions/service-example.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  labels:
    app: jenkins
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: jenkins
  type: NodePort
